# StudentGradeManager

./: .gitignore  CMakeLists.txt  README.md  StudentGradeManager.cpp
.github/workflows/: cmake-single-platform.yml  release.yml
cache/: cache.cpp  cache.h
configuration_manager/: configuration_manager.cpp  configuration_manager.h
html/: adminclasses.html  adminclasses.js  adminindex.html  adminindex.js  adminlogin.html  adminstu.html  adminstu.js  adminsubjects.html  adminsubjects.js  admintec.html  admintec.js  index.html  login.html  self_account.html  self_account.js  stugrade.html  stugrade.js  stuindex.html  stuindex.js  stusearchsubject.html  stusearchsubject.js  stusubjects.html  stusubjects.js  tecclasses.html  tecclasses.js  tecindex.html  tecindex.js  tecsubjects.html  tecsubjects.js
json/: CJsonObject.cpp  CJsonObject.h
log/: logger.cpp  logger.h
module_loader/: loader.cpp  loader.h
module_sdk/: module_sdk.cpp  module_sdk.h  stu_module.cpp  test.cpp
module_sdk/generators/: generators.h  id_generator.cpp
module_sdk/libs/: account.h  commandline.cpp  commandline.h  database.cpp  database.h  encryption.cpp  encryption.h  generators.cpp  generators.h  id_generator.cpp  login.cpp  login.h  login_enroll.cpp  login_enroll.h  one_student_type.cpp  sqlite_cpp.cpp  sqlite_cpp.h  user.cpp  user.h
rbslib/: Buffer.cpp  Buffer.h  Commandline.cpp  Commandline.h  FileIO.cpp  Network.cpp  Network.h  Storage.cpp  Storage.h  String.cpp  String.h
